# NEL_Demo

./: .gitignore  MANIFEST.in  README.md  README.sr.md  REFACTORING_NOTES.md  TEST_COVERAGE.md  conftest.py  install.ps1  install.sh  integration_test.py  manual_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
inputs/: Geografija 1000rec.txt  Geografija1000rec-noseg.txt  README.md  sample_text.txt
models/: README.md
models/trsic4-CNN-ner-nel/model-best/: config.cfg  meta.json
models/trsic4-CNN-ner-nel/model-best/entity_linker/: cfg  model
models/trsic4-CNN-ner-nel/model-best/ner/: model  moves
models/trsic4-CNN-ner-nel/model-best/senter/: model
src/: __init__.py  __main__.py  config.py  gui.py  logging_utils.py  text_chunker.py
test_env/: pyvenv.cfg
tests/: __init__.py  test_config.py  test_gui.py  test_integration.py  test_text_chunker.py
